{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 7265,
  "lineage": "4b06434a-c978-63bd-ec3d-8b8b79e0b36d",
  "resources": [
    {
      "module": "module.eks_n_california[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:security-group/sg-0547274ae6ba139cf",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0547274ae6ba139cf",
            "ingress": [],
            "name": "linxact-nc-cluster-20240115123636250000000009",
            "name_prefix": "linxact-nc-cluster-",
            "owner_id": "411623750878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linxact-nc-cluster"
            },
            "tags_all": {
              "Name": "linxact-nc-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:security-group/sg-0b33f60c0ee1beffb",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0b33f60c0ee1beffb",
            "ingress": [],
            "name": "linxact-nc-node-20240115123635471600000008",
            "name_prefix": "linxact-nc-node-",
            "owner_id": "411623750878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linxact-nc-node",
              "kubernetes.io/cluster/linxact-nc": "owned"
            },
            "tags_all": {
              "Name": "linxact-nc-node",
              "kubernetes.io/cluster/linxact-nc": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-463376563",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0547274ae6ba139cf",
            "security_group_rule_id": "sgr-0e1b5dfabbc235a9f",
            "self": false,
            "source_security_group_id": "sg-0b33f60c0ee1beffb",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.eks.aws_security_group.cluster",
            "module.eks_n_california.module.eks.aws_security_group.node",
            "module.eks_n_california.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-346726807",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b33f60c0ee1beffb",
            "security_group_rule_id": "sgr-05a91f5f27b453df9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.eks.aws_security_group.cluster",
            "module.eks_n_california.module.eks.aws_security_group.node",
            "module.eks_n_california.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2667432129",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b33f60c0ee1beffb",
            "security_group_rule_id": "sgr-0587d1534e0594d94",
            "self": false,
            "source_security_group_id": "sg-0547274ae6ba139cf",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.eks.aws_security_group.cluster",
            "module.eks_n_california.module.eks.aws_security_group.node",
            "module.eks_n_california.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-701565821",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b33f60c0ee1beffb",
            "security_group_rule_id": "sgr-0c1398fd80dff5a91",
            "self": false,
            "source_security_group_id": "sg-0547274ae6ba139cf",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.eks.aws_security_group.cluster",
            "module.eks_n_california.module.eks.aws_security_group.node",
            "module.eks_n_california.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3767758059",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b33f60c0ee1beffb",
            "security_group_rule_id": "sgr-080819c0d65469dd9",
            "self": false,
            "source_security_group_id": "sg-0547274ae6ba139cf",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.eks.aws_security_group.cluster",
            "module.eks_n_california.module.eks.aws_security_group.node",
            "module.eks_n_california.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4090450122",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b33f60c0ee1beffb",
            "security_group_rule_id": "sgr-0f532a85a43b2e09b",
            "self": false,
            "source_security_group_id": "sg-0547274ae6ba139cf",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.eks.aws_security_group.cluster",
            "module.eks_n_california.module.eks.aws_security_group.node",
            "module.eks_n_california.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2540593921",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b33f60c0ee1beffb",
            "security_group_rule_id": "sgr-01dce1261ee7a3839",
            "self": false,
            "source_security_group_id": "sg-0547274ae6ba139cf",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.eks.aws_security_group.cluster",
            "module.eks_n_california.module.eks.aws_security_group.node",
            "module.eks_n_california.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3635026273",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b33f60c0ee1beffb",
            "security_group_rule_id": "sgr-0a28aad0b71f5b3d0",
            "self": false,
            "source_security_group_id": "sg-0547274ae6ba139cf",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.eks.aws_security_group.cluster",
            "module.eks_n_california.module.eks.aws_security_group.node",
            "module.eks_n_california.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3238213210",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b33f60c0ee1beffb",
            "security_group_rule_id": "sgr-0578e94efc3505554",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.eks.aws_security_group.cluster",
            "module.eks_n_california.module.eks.aws_security_group.node",
            "module.eks_n_california.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3765565356",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b33f60c0ee1beffb",
            "security_group_rule_id": "sgr-0308481c4701e6e2e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.eks.aws_security_group.cluster",
            "module.eks_n_california.module.eks.aws_security_group.node",
            "module.eks_n_california.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1143886915",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0b33f60c0ee1beffb",
            "security_group_rule_id": "sgr-05e77e398c2fdabe2",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.eks.aws_security_group.cluster",
            "module.eks_n_california.module.eks.aws_security_group.node",
            "module.eks_n_california.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:network-acl/acl-00e1bca4acd9d0a11",
            "default_network_acl_id": "acl-00e1bca4acd9d0a11",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00e1bca4acd9d0a11",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "411623750878",
            "subnet_ids": null,
            "tags": {
              "Name": "linxact-vpc-default"
            },
            "tags_all": {
              "Name": "linxact-vpc-default"
            },
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:route-table/rtb-00b330a6ff8371dc9",
            "default_route_table_id": "rtb-00b330a6ff8371dc9",
            "id": "rtb-00b330a6ff8371dc9",
            "owner_id": "411623750878",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "linxact-vpc-default"
            },
            "tags_all": {
              "Name": "linxact-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:security-group/sg-034ff645c4a23123d",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-034ff645c4a23123d",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "411623750878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linxact-vpc-default"
            },
            "tags_all": {
              "Name": "linxact-vpc-default"
            },
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ac490c3fe7eaa08",
            "domain": "vpc",
            "id": "eipalloc-09ac490c3fe7eaa08",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-176-51-159.us-west-1.compute.amazonaws.com",
            "public_ip": "54.176.51.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "linxact-vpc-us-west-1b"
            },
            "tags_all": {
              "Name": "linxact-vpc-us-west-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_internet_gateway.this",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:internet-gateway/igw-032acc12e41f30915",
            "id": "igw-032acc12e41f30915",
            "owner_id": "411623750878",
            "tags": {
              "Name": "linxact-vpc"
            },
            "tags_all": {
              "Name": "linxact-vpc"
            },
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "dependencies": [
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ac490c3fe7eaa08",
            "association_id": "eipassoc-0aa553e500b54b9ed",
            "connectivity_type": "public",
            "id": "nat-03ff9a041d2446ec4",
            "network_interface_id": "eni-0c1a687611bc50837",
            "private_ip": "10.0.5.125",
            "public_ip": "54.176.51.159",
            "subnet_id": "subnet-00ad9a2ee255713df",
            "tags": {
              "Name": "linxact-vpc-us-west-1b"
            },
            "tags_all": {
              "Name": "linxact-vpc-us-west-1b"
            }
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_eip.nat",
            "module.eks_n_california.module.vpc.aws_internet_gateway.this",
            "module.eks_n_california.module.vpc.aws_subnet.public",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07f7ded02780c93711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03ff9a041d2446ec4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07f7ded02780c9371",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_eip.nat",
            "module.eks_n_california.module.vpc.aws_internet_gateway.this",
            "module.eks_n_california.module.vpc.aws_nat_gateway.this",
            "module.eks_n_california.module.vpc.aws_route_table.private",
            "module.eks_n_california.module.vpc.aws_subnet.public",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-032acc12e41f30915",
            "id": "r-rtb-03c48fb442acb0aab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03c48fb442acb0aab",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.vpc.aws_internet_gateway.this",
            "module.eks_n_california.module.vpc.aws_route_table.public",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:route-table/rtb-07f7ded02780c9371",
            "id": "rtb-07f7ded02780c9371",
            "owner_id": "411623750878",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "linxact-vpc-private"
            },
            "tags_all": {
              "Name": "linxact-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:route-table/rtb-03c48fb442acb0aab",
            "id": "rtb-03c48fb442acb0aab",
            "owner_id": "411623750878",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "linxact-vpc-public"
            },
            "tags_all": {
              "Name": "linxact-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0867eae233c9847be",
            "route_table_id": "rtb-07f7ded02780c9371",
            "subnet_id": "subnet-0d074309942c78d6d"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_route_table.private",
            "module.eks_n_california.module.vpc.aws_subnet.private",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03df764ced9ada521",
            "route_table_id": "rtb-07f7ded02780c9371",
            "subnet_id": "subnet-00cf10041775c0b0e"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_route_table.private",
            "module.eks_n_california.module.vpc.aws_subnet.private",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023430aea300c238a",
            "route_table_id": "rtb-07f7ded02780c9371",
            "subnet_id": "subnet-06cf0e40cb47b8490"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_route_table.private",
            "module.eks_n_california.module.vpc.aws_subnet.private",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b0566afef8e83e6",
            "route_table_id": "rtb-07f7ded02780c9371",
            "subnet_id": "subnet-0120cfa622fbb3ae4"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_route_table.private",
            "module.eks_n_california.module.vpc.aws_subnet.private",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d836743b357008d",
            "route_table_id": "rtb-07f7ded02780c9371",
            "subnet_id": "subnet-04966ab9bdd071969"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_route_table.private",
            "module.eks_n_california.module.vpc.aws_subnet.private",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0686536d9024592b4",
            "route_table_id": "rtb-03c48fb442acb0aab",
            "subnet_id": "subnet-00ad9a2ee255713df"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_route_table.public",
            "module.eks_n_california.module.vpc.aws_subnet.public",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083384489c92508b1",
            "route_table_id": "rtb-03c48fb442acb0aab",
            "subnet_id": "subnet-024d33165c21d0784"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_route_table.public",
            "module.eks_n_california.module.vpc.aws_subnet.public",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8bcf1c45b250603",
            "route_table_id": "rtb-03c48fb442acb0aab",
            "subnet_id": "subnet-0ee4b99d4a3d29175"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_route_table.public",
            "module.eks_n_california.module.vpc.aws_subnet.public",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc61d27b0946fd2f",
            "route_table_id": "rtb-03c48fb442acb0aab",
            "subnet_id": "subnet-0dfe8ab07746349be"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_route_table.public",
            "module.eks_n_california.module.vpc.aws_subnet.public",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f620278a144f9378",
            "route_table_id": "rtb-03c48fb442acb0aab",
            "subnet_id": "subnet-0e522e0f1f037a33f"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_route_table.public",
            "module.eks_n_california.module.vpc.aws_subnet.public",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:subnet/subnet-0d074309942c78d6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d074309942c78d6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-west-1b",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-west-1b",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:subnet/subnet-00cf10041775c0b0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cf10041775c0b0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-west-1c",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-west-1c",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:subnet/subnet-06cf0e40cb47b8490",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cf0e40cb47b8490",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-west-1b",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-west-1b",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:subnet/subnet-0120cfa622fbb3ae4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0120cfa622fbb3ae4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-west-1c",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-west-1c",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:subnet/subnet-04966ab9bdd071969",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04966ab9bdd071969",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-west-1b",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-west-1b",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:subnet/subnet-00ad9a2ee255713df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ad9a2ee255713df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-west-1b",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-west-1b",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:subnet/subnet-024d33165c21d0784",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024d33165c21d0784",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-west-1c",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-west-1c",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:subnet/subnet-0ee4b99d4a3d29175",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee4b99d4a3d29175",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-west-1b",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-west-1b",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:subnet/subnet-0dfe8ab07746349be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfe8ab07746349be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-west-1c",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-west-1c",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:subnet/subnet-0e522e0f1f037a33f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e522e0f1f037a33f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-west-1b",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-west-1b",
              "kubernetes.io/cluster/linxact-nc": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bce7f946f05a852d"
          },
          "dependencies": [
            "module.eks_n_california.data.aws_availability_zones.available",
            "module.eks_n_california.module.vpc.aws_vpc.this",
            "module.eks_n_california.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_california[0].module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_california",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:411623750878:vpc/vpc-0bce7f946f05a852d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00e1bca4acd9d0a11",
            "default_route_table_id": "rtb-00b330a6ff8371dc9",
            "default_security_group_id": "sg-034ff645c4a23123d",
            "dhcp_options_id": "dopt-ad8135ca",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bce7f946f05a852d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00b330a6ff8371dc9",
            "owner_id": "411623750878",
            "tags": {
              "Name": "linxact-vpc"
            },
            "tags_all": {
              "Name": "linxact-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:security-group/sg-0510dcb14dcb27272",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0510dcb14dcb27272",
            "ingress": [],
            "name": "linxact-nv-cluster-20240115123632515400000009",
            "name_prefix": "linxact-nv-cluster-",
            "owner_id": "411623750878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linxact-nv-cluster"
            },
            "tags_all": {
              "Name": "linxact-nv-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:security-group/sg-06b08abb1ef896565",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-06b08abb1ef896565",
            "ingress": [],
            "name": "linxact-nv-node-20240115123632492600000008",
            "name_prefix": "linxact-nv-node-",
            "owner_id": "411623750878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linxact-nv-node",
              "kubernetes.io/cluster/linxact-nv": "owned"
            },
            "tags_all": {
              "Name": "linxact-nv-node",
              "kubernetes.io/cluster/linxact-nv": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-803647091",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0510dcb14dcb27272",
            "security_group_rule_id": "sgr-069ebf088f9476995",
            "self": false,
            "source_security_group_id": "sg-06b08abb1ef896565",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.eks.aws_security_group.cluster",
            "module.eks_n_virginia.module.eks.aws_security_group.node",
            "module.eks_n_virginia.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1214659813",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06b08abb1ef896565",
            "security_group_rule_id": "sgr-099c1bbe5cb9382ec",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.eks.aws_security_group.cluster",
            "module.eks_n_virginia.module.eks.aws_security_group.node",
            "module.eks_n_virginia.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3630171041",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b08abb1ef896565",
            "security_group_rule_id": "sgr-0b00d6ce0725df3b4",
            "self": false,
            "source_security_group_id": "sg-0510dcb14dcb27272",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.eks.aws_security_group.cluster",
            "module.eks_n_virginia.module.eks.aws_security_group.node",
            "module.eks_n_virginia.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1332045624",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b08abb1ef896565",
            "security_group_rule_id": "sgr-09d2cb94738c65eec",
            "self": false,
            "source_security_group_id": "sg-0510dcb14dcb27272",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.eks.aws_security_group.cluster",
            "module.eks_n_virginia.module.eks.aws_security_group.node",
            "module.eks_n_virginia.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2250703022",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b08abb1ef896565",
            "security_group_rule_id": "sgr-0950ab658da5790b4",
            "self": false,
            "source_security_group_id": "sg-0510dcb14dcb27272",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.eks.aws_security_group.cluster",
            "module.eks_n_virginia.module.eks.aws_security_group.node",
            "module.eks_n_virginia.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2507881615",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b08abb1ef896565",
            "security_group_rule_id": "sgr-0471978b1e0b4f9a9",
            "self": false,
            "source_security_group_id": "sg-0510dcb14dcb27272",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.eks.aws_security_group.cluster",
            "module.eks_n_virginia.module.eks.aws_security_group.node",
            "module.eks_n_virginia.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-4057599812",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b08abb1ef896565",
            "security_group_rule_id": "sgr-07818aa9f8859827e",
            "self": false,
            "source_security_group_id": "sg-0510dcb14dcb27272",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.eks.aws_security_group.cluster",
            "module.eks_n_virginia.module.eks.aws_security_group.node",
            "module.eks_n_virginia.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-509588385",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b08abb1ef896565",
            "security_group_rule_id": "sgr-04a0bc037565c0bdd",
            "self": false,
            "source_security_group_id": "sg-0510dcb14dcb27272",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.eks.aws_security_group.cluster",
            "module.eks_n_virginia.module.eks.aws_security_group.node",
            "module.eks_n_virginia.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3137612801",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b08abb1ef896565",
            "security_group_rule_id": "sgr-00b5ffd261a71a010",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.eks.aws_security_group.cluster",
            "module.eks_n_virginia.module.eks.aws_security_group.node",
            "module.eks_n_virginia.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3044820209",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b08abb1ef896565",
            "security_group_rule_id": "sgr-0e9c734d5cc435e66",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.eks.aws_security_group.cluster",
            "module.eks_n_virginia.module.eks.aws_security_group.node",
            "module.eks_n_virginia.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-287565598",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-06b08abb1ef896565",
            "security_group_rule_id": "sgr-0ecb7d7f271c3b0b9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.eks.aws_security_group.cluster",
            "module.eks_n_virginia.module.eks.aws_security_group.node",
            "module.eks_n_virginia.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:network-acl/acl-0529579a7ce5ce716",
            "default_network_acl_id": "acl-0529579a7ce5ce716",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0529579a7ce5ce716",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "411623750878",
            "subnet_ids": null,
            "tags": {
              "Name": "linxact-vpc-default"
            },
            "tags_all": {
              "Name": "linxact-vpc-default"
            },
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:route-table/rtb-0b279365d4a4defd5",
            "default_route_table_id": "rtb-0b279365d4a4defd5",
            "id": "rtb-0b279365d4a4defd5",
            "owner_id": "411623750878",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "linxact-vpc-default"
            },
            "tags_all": {
              "Name": "linxact-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:security-group/sg-09182c8e9a9a5e835",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-09182c8e9a9a5e835",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "411623750878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linxact-vpc-default"
            },
            "tags_all": {
              "Name": "linxact-vpc-default"
            },
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a258f3c1726f141",
            "domain": "vpc",
            "id": "eipalloc-01a258f3c1726f141",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-218-236-65.compute-1.amazonaws.com",
            "public_ip": "3.218.236.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "linxact-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "linxact-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_internet_gateway.this",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:internet-gateway/igw-0fd48c97c358415bf",
            "id": "igw-0fd48c97c358415bf",
            "owner_id": "411623750878",
            "tags": {
              "Name": "linxact-vpc"
            },
            "tags_all": {
              "Name": "linxact-vpc"
            },
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "dependencies": [
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a258f3c1726f141",
            "association_id": "eipassoc-00c6a8add6c6c0252",
            "connectivity_type": "public",
            "id": "nat-0d708880934cea34c",
            "network_interface_id": "eni-0fad882d92eee63fe",
            "private_ip": "10.0.5.226",
            "public_ip": "3.218.236.65",
            "subnet_id": "subnet-08b4adb90dafd373f",
            "tags": {
              "Name": "linxact-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "linxact-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_eip.nat",
            "module.eks_n_virginia.module.vpc.aws_internet_gateway.this",
            "module.eks_n_virginia.module.vpc.aws_subnet.public",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b93fc1473acb94581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d708880934cea34c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b93fc1473acb9458",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_eip.nat",
            "module.eks_n_virginia.module.vpc.aws_internet_gateway.this",
            "module.eks_n_virginia.module.vpc.aws_nat_gateway.this",
            "module.eks_n_virginia.module.vpc.aws_route_table.private",
            "module.eks_n_virginia.module.vpc.aws_subnet.public",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fd48c97c358415bf",
            "id": "r-rtb-0b60bbd12aa1a86021080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b60bbd12aa1a8602",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.vpc.aws_internet_gateway.this",
            "module.eks_n_virginia.module.vpc.aws_route_table.public",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:route-table/rtb-0b93fc1473acb9458",
            "id": "rtb-0b93fc1473acb9458",
            "owner_id": "411623750878",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "linxact-vpc-private"
            },
            "tags_all": {
              "Name": "linxact-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:route-table/rtb-0b60bbd12aa1a8602",
            "id": "rtb-0b60bbd12aa1a8602",
            "owner_id": "411623750878",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "linxact-vpc-public"
            },
            "tags_all": {
              "Name": "linxact-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dea6f6774924bc22",
            "route_table_id": "rtb-0b93fc1473acb9458",
            "subnet_id": "subnet-099971d834c7a887d"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_route_table.private",
            "module.eks_n_virginia.module.vpc.aws_subnet.private",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f22a7837d1c6436f",
            "route_table_id": "rtb-0b93fc1473acb9458",
            "subnet_id": "subnet-09183d57be515600d"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_route_table.private",
            "module.eks_n_virginia.module.vpc.aws_subnet.private",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4183fd27741cd49",
            "route_table_id": "rtb-0b93fc1473acb9458",
            "subnet_id": "subnet-01e64055075efbca5"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_route_table.private",
            "module.eks_n_virginia.module.vpc.aws_subnet.private",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e5857b66f81ce82",
            "route_table_id": "rtb-0b93fc1473acb9458",
            "subnet_id": "subnet-0aa3a167c2c15969c"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_route_table.private",
            "module.eks_n_virginia.module.vpc.aws_subnet.private",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9da404e8a100119",
            "route_table_id": "rtb-0b93fc1473acb9458",
            "subnet_id": "subnet-05a763b74d2f8eb19"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_route_table.private",
            "module.eks_n_virginia.module.vpc.aws_subnet.private",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b626974f60fd6f6",
            "route_table_id": "rtb-0b60bbd12aa1a8602",
            "subnet_id": "subnet-08b4adb90dafd373f"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_route_table.public",
            "module.eks_n_virginia.module.vpc.aws_subnet.public",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02801d2b58d2966bd",
            "route_table_id": "rtb-0b60bbd12aa1a8602",
            "subnet_id": "subnet-0e2038eb0593b9aa5"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_route_table.public",
            "module.eks_n_virginia.module.vpc.aws_subnet.public",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcf59ab84db53be9",
            "route_table_id": "rtb-0b60bbd12aa1a8602",
            "subnet_id": "subnet-08c2632b7fe24cdf0"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_route_table.public",
            "module.eks_n_virginia.module.vpc.aws_subnet.public",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a802b795c75a13f",
            "route_table_id": "rtb-0b60bbd12aa1a8602",
            "subnet_id": "subnet-09850e1e1b0a664eb"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_route_table.public",
            "module.eks_n_virginia.module.vpc.aws_subnet.public",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093c921dcec325fff",
            "route_table_id": "rtb-0b60bbd12aa1a8602",
            "subnet_id": "subnet-00793ff4c987b73d2"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_route_table.public",
            "module.eks_n_virginia.module.vpc.aws_subnet.public",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:subnet/subnet-099971d834c7a887d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099971d834c7a887d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-east-1a",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-east-1a",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:subnet/subnet-09183d57be515600d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09183d57be515600d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-east-1b",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-east-1b",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:subnet/subnet-01e64055075efbca5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e64055075efbca5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-east-1c",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-east-1c",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:subnet/subnet-0aa3a167c2c15969c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa3a167c2c15969c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-east-1d",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-east-1d",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:subnet/subnet-05a763b74d2f8eb19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a763b74d2f8eb19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-east-1a",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-east-1a",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:subnet/subnet-08b4adb90dafd373f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b4adb90dafd373f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-east-1a",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-east-1a",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:subnet/subnet-0e2038eb0593b9aa5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2038eb0593b9aa5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-east-1b",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-east-1b",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:subnet/subnet-08c2632b7fe24cdf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c2632b7fe24cdf0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-east-1c",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-east-1c",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:subnet/subnet-09850e1e1b0a664eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09850e1e1b0a664eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-east-1d",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-east-1d",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:subnet/subnet-00793ff4c987b73d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00793ff4c987b73d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-east-1a",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-east-1a",
              "kubernetes.io/cluster/linxact-nv": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07ee0ae8b9e7e51e9"
          },
          "dependencies": [
            "module.eks_n_virginia.data.aws_availability_zones.available",
            "module.eks_n_virginia.module.vpc.aws_vpc.this",
            "module.eks_n_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_n_virginia[0].module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].n_virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411623750878:vpc/vpc-07ee0ae8b9e7e51e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0529579a7ce5ce716",
            "default_route_table_id": "rtb-0b279365d4a4defd5",
            "default_security_group_id": "sg-09182c8e9a9a5e835",
            "dhcp_options_id": "dopt-df557ca7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ee0ae8b9e7e51e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b279365d4a4defd5",
            "owner_id": "411623750878",
            "tags": {
              "Name": "linxact-vpc"
            },
            "tags_all": {
              "Name": "linxact-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:security-group/sg-06cbfb505d774e80c",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-06cbfb505d774e80c",
            "ingress": [],
            "name": "linxact-oh-cluster-20240115123625341800000008",
            "name_prefix": "linxact-oh-cluster-",
            "owner_id": "411623750878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linxact-oh-cluster"
            },
            "tags_all": {
              "Name": "linxact-oh-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:security-group/sg-020539be9adbb0bd4",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-020539be9adbb0bd4",
            "ingress": [],
            "name": "linxact-oh-node-20240115123625371000000009",
            "name_prefix": "linxact-oh-node-",
            "owner_id": "411623750878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linxact-oh-node",
              "kubernetes.io/cluster/linxact-oh": "owned"
            },
            "tags_all": {
              "Name": "linxact-oh-node",
              "kubernetes.io/cluster/linxact-oh": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3178163517",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06cbfb505d774e80c",
            "security_group_rule_id": "sgr-083ddfc789c31ef10",
            "self": false,
            "source_security_group_id": "sg-020539be9adbb0bd4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.eks.aws_security_group.cluster",
            "module.eks_ohio.module.eks.aws_security_group.node",
            "module.eks_ohio.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-655322361",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-020539be9adbb0bd4",
            "security_group_rule_id": "sgr-0be85331713fd1475",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.eks.aws_security_group.cluster",
            "module.eks_ohio.module.eks.aws_security_group.node",
            "module.eks_ohio.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1579354413",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020539be9adbb0bd4",
            "security_group_rule_id": "sgr-02e7c2231364e6c0b",
            "self": false,
            "source_security_group_id": "sg-06cbfb505d774e80c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.eks.aws_security_group.cluster",
            "module.eks_ohio.module.eks.aws_security_group.node",
            "module.eks_ohio.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3334703760",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020539be9adbb0bd4",
            "security_group_rule_id": "sgr-0a3794be4b43cbf1c",
            "self": false,
            "source_security_group_id": "sg-06cbfb505d774e80c",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.eks.aws_security_group.cluster",
            "module.eks_ohio.module.eks.aws_security_group.node",
            "module.eks_ohio.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-260173062",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020539be9adbb0bd4",
            "security_group_rule_id": "sgr-047a433677236dd4a",
            "self": false,
            "source_security_group_id": "sg-06cbfb505d774e80c",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.eks.aws_security_group.cluster",
            "module.eks_ohio.module.eks.aws_security_group.node",
            "module.eks_ohio.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-484299047",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020539be9adbb0bd4",
            "security_group_rule_id": "sgr-059edd9d5189a6425",
            "self": false,
            "source_security_group_id": "sg-06cbfb505d774e80c",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.eks.aws_security_group.cluster",
            "module.eks_ohio.module.eks.aws_security_group.node",
            "module.eks_ohio.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2021450476",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020539be9adbb0bd4",
            "security_group_rule_id": "sgr-0f8ebb5b804c3ec41",
            "self": false,
            "source_security_group_id": "sg-06cbfb505d774e80c",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.eks.aws_security_group.cluster",
            "module.eks_ohio.module.eks.aws_security_group.node",
            "module.eks_ohio.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1484769169",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020539be9adbb0bd4",
            "security_group_rule_id": "sgr-0341f81cda2c74c48",
            "self": false,
            "source_security_group_id": "sg-06cbfb505d774e80c",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.eks.aws_security_group.cluster",
            "module.eks_ohio.module.eks.aws_security_group.node",
            "module.eks_ohio.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2048841747",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020539be9adbb0bd4",
            "security_group_rule_id": "sgr-0e5c3de2d314babad",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.eks.aws_security_group.cluster",
            "module.eks_ohio.module.eks.aws_security_group.node",
            "module.eks_ohio.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1741368285",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020539be9adbb0bd4",
            "security_group_rule_id": "sgr-0f7460c205d5429ee",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.eks.aws_security_group.cluster",
            "module.eks_ohio.module.eks.aws_security_group.node",
            "module.eks_ohio.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3281291314",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-020539be9adbb0bd4",
            "security_group_rule_id": "sgr-01ddc70a743c0b2b7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.eks.aws_security_group.cluster",
            "module.eks_ohio.module.eks.aws_security_group.node",
            "module.eks_ohio.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:network-acl/acl-0e77a34535c76a18c",
            "default_network_acl_id": "acl-0e77a34535c76a18c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e77a34535c76a18c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "411623750878",
            "subnet_ids": [
              "subnet-0054fea609d4497c3",
              "subnet-01c4f79cfa6cc7847",
              "subnet-03f0644fb434ce55a",
              "subnet-0501474673135cf32"
            ],
            "tags": {
              "Name": "linxact-vpc-default"
            },
            "tags_all": {
              "Name": "linxact-vpc-default"
            },
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:route-table/rtb-0258acb11992eedf4",
            "default_route_table_id": "rtb-0258acb11992eedf4",
            "id": "rtb-0258acb11992eedf4",
            "owner_id": "411623750878",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "linxact-vpc-default"
            },
            "tags_all": {
              "Name": "linxact-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:security-group/sg-05979b3d76c9b88c8",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05979b3d76c9b88c8",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "411623750878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linxact-vpc-default"
            },
            "tags_all": {
              "Name": "linxact-vpc-default"
            },
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01680c3e8b815dd3e",
            "domain": "vpc",
            "id": "eipalloc-01680c3e8b815dd3e",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-143-129-92.us-east-2.compute.amazonaws.com",
            "public_ip": "3.143.129.92",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "linxact-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "linxact-vpc-us-east-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_internet_gateway.this",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:internet-gateway/igw-06d94f3f3f9faeda4",
            "id": "igw-06d94f3f3f9faeda4",
            "owner_id": "411623750878",
            "tags": {
              "Name": "linxact-vpc"
            },
            "tags_all": {
              "Name": "linxact-vpc"
            },
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "dependencies": [
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01680c3e8b815dd3e",
            "association_id": "eipassoc-01d125e5d6ff8e618",
            "connectivity_type": "public",
            "id": "nat-023fb5a802f0aa71c",
            "network_interface_id": "eni-0dd37b96c3a1c5c0c",
            "private_ip": "10.0.5.11",
            "public_ip": "3.143.129.92",
            "subnet_id": "subnet-0e774706d7e73b7f5",
            "tags": {
              "Name": "linxact-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "linxact-vpc-us-east-2a"
            }
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_eip.nat",
            "module.eks_ohio.module.vpc.aws_internet_gateway.this",
            "module.eks_ohio.module.vpc.aws_subnet.public",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0717f20dd6791b47b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-023fb5a802f0aa71c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0717f20dd6791b47b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_eip.nat",
            "module.eks_ohio.module.vpc.aws_internet_gateway.this",
            "module.eks_ohio.module.vpc.aws_nat_gateway.this",
            "module.eks_ohio.module.vpc.aws_route_table.private",
            "module.eks_ohio.module.vpc.aws_subnet.public",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06d94f3f3f9faeda4",
            "id": "r-rtb-05eac028a8ebe456b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05eac028a8ebe456b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.vpc.aws_internet_gateway.this",
            "module.eks_ohio.module.vpc.aws_route_table.public",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:route-table/rtb-0717f20dd6791b47b",
            "id": "rtb-0717f20dd6791b47b",
            "owner_id": "411623750878",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "linxact-vpc-private"
            },
            "tags_all": {
              "Name": "linxact-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:route-table/rtb-05eac028a8ebe456b",
            "id": "rtb-05eac028a8ebe456b",
            "owner_id": "411623750878",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "linxact-vpc-public"
            },
            "tags_all": {
              "Name": "linxact-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0968714030f002041",
            "route_table_id": "rtb-0717f20dd6791b47b",
            "subnet_id": "subnet-021bce1d5e007f395"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_route_table.private",
            "module.eks_ohio.module.vpc.aws_subnet.private",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c67f3fe25d3b1ae5",
            "route_table_id": "rtb-0717f20dd6791b47b",
            "subnet_id": "subnet-03f0644fb434ce55a"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_route_table.private",
            "module.eks_ohio.module.vpc.aws_subnet.private",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0906ada9c84ad2885",
            "route_table_id": "rtb-0717f20dd6791b47b",
            "subnet_id": "subnet-02733bd6b6321d820"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_route_table.private",
            "module.eks_ohio.module.vpc.aws_subnet.private",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac01418c15dc70ad",
            "route_table_id": "rtb-0717f20dd6791b47b",
            "subnet_id": "subnet-0988581f4a74da79c"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_route_table.private",
            "module.eks_ohio.module.vpc.aws_subnet.private",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074613e3c7b22660a",
            "route_table_id": "rtb-0717f20dd6791b47b",
            "subnet_id": "subnet-0fc30f661dae765bb"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_route_table.private",
            "module.eks_ohio.module.vpc.aws_subnet.private",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4d3e913b5ef2d88",
            "route_table_id": "rtb-05eac028a8ebe456b",
            "subnet_id": "subnet-0e774706d7e73b7f5"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_route_table.public",
            "module.eks_ohio.module.vpc.aws_subnet.public",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062ab433b46b7e38a",
            "route_table_id": "rtb-05eac028a8ebe456b",
            "subnet_id": "subnet-0054fea609d4497c3"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_route_table.public",
            "module.eks_ohio.module.vpc.aws_subnet.public",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e878452975c0c6c",
            "route_table_id": "rtb-05eac028a8ebe456b",
            "subnet_id": "subnet-0501474673135cf32"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_route_table.public",
            "module.eks_ohio.module.vpc.aws_subnet.public",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3a1df81a9bde60e",
            "route_table_id": "rtb-05eac028a8ebe456b",
            "subnet_id": "subnet-0cdeaefed383d124d"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_route_table.public",
            "module.eks_ohio.module.vpc.aws_subnet.public",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001956e71b81a8a7e",
            "route_table_id": "rtb-05eac028a8ebe456b",
            "subnet_id": "subnet-01c4f79cfa6cc7847"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_route_table.public",
            "module.eks_ohio.module.vpc.aws_subnet.public",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:subnet/subnet-021bce1d5e007f395",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021bce1d5e007f395",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-east-2a",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-east-2a",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:subnet/subnet-03f0644fb434ce55a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f0644fb434ce55a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-east-2b",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-east-2b",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:subnet/subnet-02733bd6b6321d820",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02733bd6b6321d820",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-east-2c",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-east-2c",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:subnet/subnet-0988581f4a74da79c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0988581f4a74da79c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-east-2a",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-east-2a",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:subnet/subnet-0fc30f661dae765bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc30f661dae765bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-east-2b",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-east-2b",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:subnet/subnet-0e774706d7e73b7f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e774706d7e73b7f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-east-2a",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-east-2a",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:subnet/subnet-0054fea609d4497c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0054fea609d4497c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-east-2b",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-east-2b",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:subnet/subnet-0501474673135cf32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0501474673135cf32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-east-2c",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-east-2c",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:subnet/subnet-0cdeaefed383d124d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdeaefed383d124d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-east-2a",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-east-2a",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:subnet/subnet-01c4f79cfa6cc7847",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c4f79cfa6cc7847",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-east-2b",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-east-2b",
              "kubernetes.io/cluster/linxact-oh": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e3bd59f693990e36"
          },
          "dependencies": [
            "module.eks_ohio.data.aws_availability_zones.available",
            "module.eks_ohio.module.vpc.aws_vpc.this",
            "module.eks_ohio.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_ohio[0].module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].ohio",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:411623750878:vpc/vpc-0e3bd59f693990e36",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e77a34535c76a18c",
            "default_route_table_id": "rtb-0258acb11992eedf4",
            "default_security_group_id": "sg-05979b3d76c9b88c8",
            "dhcp_options_id": "dopt-7287ea1a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3bd59f693990e36",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0258acb11992eedf4",
            "owner_id": "411623750878",
            "tags": {
              "Name": "linxact-vpc"
            },
            "tags_all": {
              "Name": "linxact-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:security-group/sg-0f73fa42c475c6fad",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0f73fa42c475c6fad",
            "ingress": [],
            "name": "linxact-or-cluster-20240115123640343700000009",
            "name_prefix": "linxact-or-cluster-",
            "owner_id": "411623750878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linxact-or-cluster"
            },
            "tags_all": {
              "Name": "linxact-or-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:security-group/sg-02cd5c67df9a077cf",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-02cd5c67df9a077cf",
            "ingress": [],
            "name": "linxact-or-node-20240115123640282300000008",
            "name_prefix": "linxact-or-node-",
            "owner_id": "411623750878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linxact-or-node",
              "kubernetes.io/cluster/linxact-or": "owned"
            },
            "tags_all": {
              "Name": "linxact-or-node",
              "kubernetes.io/cluster/linxact-or": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-454609165",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f73fa42c475c6fad",
            "security_group_rule_id": "sgr-06217f2da0ebf2871",
            "self": false,
            "source_security_group_id": "sg-02cd5c67df9a077cf",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.eks.aws_security_group.cluster",
            "module.eks_oregon.module.eks.aws_security_group.node",
            "module.eks_oregon.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1565752810",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02cd5c67df9a077cf",
            "security_group_rule_id": "sgr-095b4f551defc4937",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.eks.aws_security_group.cluster",
            "module.eks_oregon.module.eks.aws_security_group.node",
            "module.eks_oregon.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1761741588",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02cd5c67df9a077cf",
            "security_group_rule_id": "sgr-0314f9509f9cf141d",
            "self": false,
            "source_security_group_id": "sg-0f73fa42c475c6fad",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.eks.aws_security_group.cluster",
            "module.eks_oregon.module.eks.aws_security_group.node",
            "module.eks_oregon.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1683252869",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02cd5c67df9a077cf",
            "security_group_rule_id": "sgr-013054b62e5520aca",
            "self": false,
            "source_security_group_id": "sg-0f73fa42c475c6fad",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.eks.aws_security_group.cluster",
            "module.eks_oregon.module.eks.aws_security_group.node",
            "module.eks_oregon.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2903900435",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02cd5c67df9a077cf",
            "security_group_rule_id": "sgr-0f36f68ea3cef8660",
            "self": false,
            "source_security_group_id": "sg-0f73fa42c475c6fad",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.eks.aws_security_group.cluster",
            "module.eks_oregon.module.eks.aws_security_group.node",
            "module.eks_oregon.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3192536370",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02cd5c67df9a077cf",
            "security_group_rule_id": "sgr-0de32b2fcd0f7383a",
            "self": false,
            "source_security_group_id": "sg-0f73fa42c475c6fad",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.eks.aws_security_group.cluster",
            "module.eks_oregon.module.eks.aws_security_group.node",
            "module.eks_oregon.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3672837881",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02cd5c67df9a077cf",
            "security_group_rule_id": "sgr-0adb21e0fb34ef40d",
            "self": false,
            "source_security_group_id": "sg-0f73fa42c475c6fad",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.eks.aws_security_group.cluster",
            "module.eks_oregon.module.eks.aws_security_group.node",
            "module.eks_oregon.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2221611747",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02cd5c67df9a077cf",
            "security_group_rule_id": "sgr-020f222e0e1919813",
            "self": false,
            "source_security_group_id": "sg-0f73fa42c475c6fad",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.eks.aws_security_group.cluster",
            "module.eks_oregon.module.eks.aws_security_group.node",
            "module.eks_oregon.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3623680034",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02cd5c67df9a077cf",
            "security_group_rule_id": "sgr-0d7613af31511fa38",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.eks.aws_security_group.cluster",
            "module.eks_oregon.module.eks.aws_security_group.node",
            "module.eks_oregon.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1953886242",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02cd5c67df9a077cf",
            "security_group_rule_id": "sgr-04916485a9d2b03c8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.eks.aws_security_group.cluster",
            "module.eks_oregon.module.eks.aws_security_group.node",
            "module.eks_oregon.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3492434893",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-02cd5c67df9a077cf",
            "security_group_rule_id": "sgr-029d5a9845dc5e946",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.eks.aws_security_group.cluster",
            "module.eks_oregon.module.eks.aws_security_group.node",
            "module.eks_oregon.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:network-acl/acl-0b0c9f42af64602cf",
            "default_network_acl_id": "acl-0b0c9f42af64602cf",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b0c9f42af64602cf",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "411623750878",
            "subnet_ids": null,
            "tags": {
              "Name": "linxact-vpc-default"
            },
            "tags_all": {
              "Name": "linxact-vpc-default"
            },
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:route-table/rtb-0cd26f1307567c072",
            "default_route_table_id": "rtb-0cd26f1307567c072",
            "id": "rtb-0cd26f1307567c072",
            "owner_id": "411623750878",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "linxact-vpc-default"
            },
            "tags_all": {
              "Name": "linxact-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:security-group/sg-02e660bafa944df91",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02e660bafa944df91",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "411623750878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linxact-vpc-default"
            },
            "tags_all": {
              "Name": "linxact-vpc-default"
            },
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d664ed11fdca1b99",
            "domain": "vpc",
            "id": "eipalloc-0d664ed11fdca1b99",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-82-243-168.us-west-2.compute.amazonaws.com",
            "public_ip": "35.82.243.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "linxact-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "linxact-vpc-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_internet_gateway.this",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:internet-gateway/igw-059089ea3bac144b5",
            "id": "igw-059089ea3bac144b5",
            "owner_id": "411623750878",
            "tags": {
              "Name": "linxact-vpc"
            },
            "tags_all": {
              "Name": "linxact-vpc"
            },
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "dependencies": [
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d664ed11fdca1b99",
            "association_id": "eipassoc-07195acb0f6bd037e",
            "connectivity_type": "public",
            "id": "nat-0a05ba3e52825a8d0",
            "network_interface_id": "eni-044299556c27d8755",
            "private_ip": "10.0.5.134",
            "public_ip": "35.82.243.168",
            "subnet_id": "subnet-0dd0e73192fbd47b5",
            "tags": {
              "Name": "linxact-vpc-us-west-2a"
            },
            "tags_all": {
              "Name": "linxact-vpc-us-west-2a"
            }
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_eip.nat",
            "module.eks_oregon.module.vpc.aws_internet_gateway.this",
            "module.eks_oregon.module.vpc.aws_subnet.public",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c7e9e6382587631c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a05ba3e52825a8d0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c7e9e6382587631c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_eip.nat",
            "module.eks_oregon.module.vpc.aws_internet_gateway.this",
            "module.eks_oregon.module.vpc.aws_nat_gateway.this",
            "module.eks_oregon.module.vpc.aws_route_table.private",
            "module.eks_oregon.module.vpc.aws_subnet.public",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-059089ea3bac144b5",
            "id": "r-rtb-0217caa5d9bfbf96b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0217caa5d9bfbf96b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.vpc.aws_internet_gateway.this",
            "module.eks_oregon.module.vpc.aws_route_table.public",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:route-table/rtb-0c7e9e6382587631c",
            "id": "rtb-0c7e9e6382587631c",
            "owner_id": "411623750878",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "linxact-vpc-private"
            },
            "tags_all": {
              "Name": "linxact-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:route-table/rtb-0217caa5d9bfbf96b",
            "id": "rtb-0217caa5d9bfbf96b",
            "owner_id": "411623750878",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "linxact-vpc-public"
            },
            "tags_all": {
              "Name": "linxact-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0564ce5f0742c2020",
            "route_table_id": "rtb-0c7e9e6382587631c",
            "subnet_id": "subnet-0fafd7b10ca0ca115"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_route_table.private",
            "module.eks_oregon.module.vpc.aws_subnet.private",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c79ec3cd331a360",
            "route_table_id": "rtb-0c7e9e6382587631c",
            "subnet_id": "subnet-07023e7f535e676d6"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_route_table.private",
            "module.eks_oregon.module.vpc.aws_subnet.private",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af60cab05a98d857",
            "route_table_id": "rtb-0c7e9e6382587631c",
            "subnet_id": "subnet-0f941ea9536af4a9d"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_route_table.private",
            "module.eks_oregon.module.vpc.aws_subnet.private",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06538560f699d9ce5",
            "route_table_id": "rtb-0c7e9e6382587631c",
            "subnet_id": "subnet-0b8a62e3f48840940"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_route_table.private",
            "module.eks_oregon.module.vpc.aws_subnet.private",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c65aa1db9674831",
            "route_table_id": "rtb-0c7e9e6382587631c",
            "subnet_id": "subnet-04b4a9bf00dc39bc5"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_route_table.private",
            "module.eks_oregon.module.vpc.aws_subnet.private",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7ecfee683c5c2a7",
            "route_table_id": "rtb-0217caa5d9bfbf96b",
            "subnet_id": "subnet-0dd0e73192fbd47b5"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_route_table.public",
            "module.eks_oregon.module.vpc.aws_subnet.public",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d49200e4dbb99bbc",
            "route_table_id": "rtb-0217caa5d9bfbf96b",
            "subnet_id": "subnet-0906b9eded59ad213"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_route_table.public",
            "module.eks_oregon.module.vpc.aws_subnet.public",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cb28b02779b2700",
            "route_table_id": "rtb-0217caa5d9bfbf96b",
            "subnet_id": "subnet-01f2575e4c0fd1d08"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_route_table.public",
            "module.eks_oregon.module.vpc.aws_subnet.public",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dc3247e2445c40b",
            "route_table_id": "rtb-0217caa5d9bfbf96b",
            "subnet_id": "subnet-082693ad07904f868"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_route_table.public",
            "module.eks_oregon.module.vpc.aws_subnet.public",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032fc3e5fbf4c491d",
            "route_table_id": "rtb-0217caa5d9bfbf96b",
            "subnet_id": "subnet-00871851c4da91cf6"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_route_table.public",
            "module.eks_oregon.module.vpc.aws_subnet.public",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:subnet/subnet-0fafd7b10ca0ca115",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fafd7b10ca0ca115",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-west-2a",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-west-2a",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:subnet/subnet-07023e7f535e676d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07023e7f535e676d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-west-2b",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-west-2b",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:subnet/subnet-0f941ea9536af4a9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f941ea9536af4a9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-west-2c",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-west-2c",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:subnet/subnet-0b8a62e3f48840940",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8a62e3f48840940",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-west-2d",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-west-2d",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:subnet/subnet-04b4a9bf00dc39bc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b4a9bf00dc39bc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-private-us-west-2a",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-private-us-west-2a",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:subnet/subnet-0dd0e73192fbd47b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd0e73192fbd47b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-west-2a",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-west-2a",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:subnet/subnet-0906b9eded59ad213",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0906b9eded59ad213",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-west-2b",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-west-2b",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:subnet/subnet-01f2575e4c0fd1d08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f2575e4c0fd1d08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-west-2c",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-west-2c",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:subnet/subnet-082693ad07904f868",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082693ad07904f868",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-west-2d",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-west-2d",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:subnet/subnet-00871851c4da91cf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00871851c4da91cf6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411623750878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "linxact-vpc-public-us-west-2a",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "linxact-vpc-public-us-west-2a",
              "kubernetes.io/cluster/linxact-or": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07b98d780a20abec1"
          },
          "dependencies": [
            "module.eks_oregon.data.aws_availability_zones.available",
            "module.eks_oregon.module.vpc.aws_vpc.this",
            "module.eks_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_oregon[0].module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411623750878:vpc/vpc-07b98d780a20abec1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b0c9f42af64602cf",
            "default_route_table_id": "rtb-0cd26f1307567c072",
            "default_security_group_id": "sg-02e660bafa944df91",
            "dhcp_options_id": "dopt-b3f197ca",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07b98d780a20abec1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cd26f1307567c072",
            "owner_id": "411623750878",
            "tags": {
              "Name": "linxact-vpc"
            },
            "tags_all": {
              "Name": "linxact-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}